<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edad_minima_10"
        android:id="@+id/tvEdadMin"/>

    <SeekBar
        android:id="@+id/sbEMin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:min="1"
        android:progress="1"
        android:max="100"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edad_maxima_30"
        android:id="@+id/tvEdadMax"/>

    <SeekBar
        android:id="@+id/sbEMax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:min="1"
        android:progress="100"
        android:max="100"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filtro_de_nombre"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/grupoFiltro">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empieza_por"
            android:id="@+id/rbEmpiezaPor"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contiene"
            android:id="@+id/rbContiene"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/busca"
            android:id="@+id/rbBuscar"/>

    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introduce_texto_para_buscar_por_el_nombre"
        android:id="@+id/etComparaNombre"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/busc"
        android:id="@+id/bParaBuscar"/>

</LinearLayout>